src/test/deca/context/invalid/created/binary_exp/op_comp/eq_boolean_int.deca
// Description :
//    test eq entre un boolean et un int
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: Opérandes de type boolean, int, attendu: (int|float, int|float) ou (class|null, class|null) ou (bool, bool)

{
boolean a;
int b;
boolean c = a == b;
}
